Split into training and testing data

--- a/code.ipynb
+++ b/code.ipynb
@@ -31,7 +31,7 @@
         "Plan:\n",
         "1. Load CSV va_voting data - Gabe\n",
         "2. Clean data into proper format for ML model - Gabe\n",
-        "3. Split into training and testing data - Gabe\n",
+        "3. Split into training and testing data - Naad\n",
         "4. Choose correct ML model - Naad\n",
         "5. Perform ML model - Naad\n",
         "6. Calculate metrics to assess ML model - Ben\n",
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 5,
       "metadata": {
         "id": "q9c7g8xvCE6a"
       },
@@ -89,19 +89,19 @@
         "#print(\"Unique counties:\", df['County Name'].unique())\n",
         "print('Number of NAs in counties:', df['County Name'].isna().sum())\n",
         "\n",
-        "# Clean total votes: Drop any total where votes are less than 1 (there were two outliers for 2016 in Bedford)\n",
+        "# Clean total votes: Drop any total where votes are less than 1 (there were two outliers for 2016 in Bedford with a vote count of 0)\n",
         "df_index = df[df['Total Votes'] <= 0].index\n",
         "df = df.drop(df_index)\n",
         "print(\"Number of NAs in Total Votes:\", df['Total Votes'].isna().sum())\n",
         "#print(df['Total Votes'].unique())\n",
         "\n",
-        "# Clean candidate votes: Drop any total where votes are less than 1 (there were two outliers for 2016 in Bedford)\n",
+        "# Clean candidate votes: Drop any total where votes are less than 1 (there were two outliers for 2016 in Bedford with a vote count of 0)\n",
         "df_index = df[df['Candidate Votes'] <= 0].index\n",
         "df = df.drop(df_index)\n",
         "print(\"Number of NAs in Candidate Votes:\", df['Total Votes'].isna().sum())\n",
         "#print(df['Candidate Votes'].unique())\n",
         "\n",
-        "df.head()\n"
+        "df.head()"
       ],
       "metadata": {
         "id": "CKLBOmRtFHxn",
@@ -109,9 +109,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "328a61c5-b3c0-434c-ea3a-950e9e118551"
+        "outputId": "39500db5-2648-4086-e581-9df5f28add68"
       },
-      "execution_count": 62,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3c603fa4-9a24-412f-b019-76311146ad20\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5ec1ca6e-f754-409f-93f5-9bf2f01e46b2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -210,7 +210,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3c603fa4-9a24-412f-b019-76311146ad20')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ec1ca6e-f754-409f-93f5-9bf2f01e46b2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -262,12 +262,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3c603fa4-9a24-412f-b019-76311146ad20 button.colab-df-convert');\n",
+              "        document.querySelector('#df-5ec1ca6e-f754-409f-93f5-9bf2f01e46b2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3c603fa4-9a24-412f-b019-76311146ad20');\n",
+              "        const element = document.querySelector('#df-5ec1ca6e-f754-409f-93f5-9bf2f01e46b2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -287,8 +287,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-30863fd6-3a54-41b2-bfa4-74fcbc2bae9f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-30863fd6-3a54-41b2-bfa4-74fcbc2bae9f')\"\n",
+              "<div id=\"df-cc3b9879-2f5a-4eef-aa42-0c6a570c79b9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cc3b9879-2f5a-4eef-aa42-0c6a570c79b9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -407,7 +407,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-30863fd6-3a54-41b2-bfa4-74fcbc2bae9f button');\n",
+              "        document.querySelector('#df-cc3b9879-2f5a-4eef-aa42-0c6a570c79b9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -423,18 +423,66 @@
             }
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Separate the data into training and testing sets\n",
+        "# Testing data is from the year 2020\n",
+        "train_df = df[df['Year'] != 2020]\n",
+        "test_df = df[df['Year'] == 2020]\n",
+        "\n",
+        "# Check the distribution of training and testing data\n",
+        "print(f\"Training data shape: {train_df.shape}\")\n",
+        "print(f\"Testing data shape: {test_df.shape}\")\n",
+        "\n",
+        "train_df.head(), test_df.head()"
+      ],
       "metadata": {
-        "id": "SR1pQO4bHJ5h"
+        "id": "SR1pQO4bHJ5h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf6a8714-6d9c-447a-d6a0-44aea2716212"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training data shape: (1338, 5)\n",
+            "Testing data shape: (763, 5)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(   Year County Name       Party  Total Votes  Candidate Votes\n",
+              " 0  2000    ACCOMACK    DEMOCRAT        11925             5092\n",
+              " 1  2000    ACCOMACK  REPUBLICAN        11925             6352\n",
+              " 4  2000   ALBEMARLE    DEMOCRAT        36846            16255\n",
+              " 5  2000   ALBEMARLE  REPUBLICAN        36846            18291\n",
+              " 8  2000   ALLEGHANY    DEMOCRAT         5123             2214,\n",
+              "       Year County Name       Party  Total Votes  Candidate Votes\n",
+              " 2144  2020    ACCOMACK    DEMOCRAT        16962             5495\n",
+              " 2145  2020    ACCOMACK    DEMOCRAT        16962             2072\n",
+              " 2146  2020    ACCOMACK    DEMOCRAT        16962               11\n",
+              " 2153  2020    ACCOMACK  REPUBLICAN        16962             3084\n",
+              " 2154  2020    ACCOMACK  REPUBLICAN        16962             6078)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     }
   ]
 }
