Added descriptions of new coding objectives

--- a/code.ipynb
+++ b/code.ipynb
@@ -941,6 +941,61 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate total votes growth rates"
+      ],
+      "metadata": {
+        "id": "fDSER2a5Lurm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use growth rates and 2020 total votes to derive 2024 total votes"
+      ],
+      "metadata": {
+        "id": "3UNyFePbL19u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use our model to predict democrat and republic candidate votes for each county"
+      ],
+      "metadata": {
+        "id": "AXi8GacxMB4_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calcute net votes for each county using predicted values"
+      ],
+      "metadata": {
+        "id": "xAAtsaXxMIfF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Graph net vote values on VA map"
+      ],
+      "metadata": {
+        "id": "WqruGgU9MPRO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
