Added comments and deleted unused code

--- a/code.ipynb
+++ b/code.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +31,11 @@
         "Plan:\n",
         "1. Load CSV va_voting data - Gabe\n",
         "2. Clean data into proper format for ML model - Gabe\n",
-        "3. Split into training and testing data - Naad\n",
-        "4. Choose correct ML model - Naad\n",
-        "5. Perform ML model - Naad\n",
-        "6. Calculate metrics to assess ML model - Ben\n",
-        "7. Create a state map based on 2024 inputs to the model - Ben"
+        "3. Create correct linear regression model - Ben\n",
+        "4. Calculate metrics to assess the linear regression model - Ben\n",
+        "5. Use model to predict 2024 votes - Ben\n",
+        "6. Calculate net votes for each county using predicted values - Ben\n",
+        "7. Create a state map based on 2024 inputs to the model - Naad"
       ],
       "metadata": {
         "id": "5w-WxBbfCGbV"
@@ -44,13 +43,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "q9c7g8xvCE6a"
       },
       "outputs": [],
       "source": [
-        "# Load CSV va_voting data\n",
+        "# 1. Load CSV va_voting data\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -61,7 +60,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Clean data into proper format for ML model\n",
+        "# 2. Clean data into proper format for ML model\n",
         "\n",
         "# Independent variables to use:\n",
         "# - Year\n",
@@ -71,9 +70,6 @@
         "\n",
         "# Dependent variables to use:\n",
         "# - Candidate votes\n",
-        "\n",
-        "# Select the columns from the df that we will use\n",
-        "#df = pd.concat([csv_df['year'], csv_df['county_name'], csv_df['party'], csv_df['totalvotes'], csv_df['candidatevotes']], axis=1)\n",
         "\n",
         "# Rename columns\n",
         "df = csv_df.rename(columns={'year': 'Year', 'county_name': 'County Name', 'party': 'Party', 'totalvotes': 'Total Votes', 'candidatevotes': 'Candidate Votes', 'candidate': 'Candidate'})\n",
@@ -127,7 +123,7 @@
         },
         "outputId": "697121d4-0888-4faa-82f5-68a9a40d49ad"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,92 +677,7 @@
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import PolynomialFeatures\n",
-        "\n",
-        "# Separate the data into training and testing sets\n",
-        "# Testing data is from the year 2020\n",
-        "train_df = df[df['Year'] != 2020]\n",
-        "test_df = df[df['Year'] == 2020]\n",
-        "\n",
-        "# Check the distribution of training and testing data\n",
-        "print(f\"Training data shape: {train_df.shape}\")\n",
-        "print(f\"Testing data shape: {test_df.shape}\")\n",
-        "\n",
-        "train_df.head(), test_df.head()"
-      ],
-      "metadata": {
-        "id": "SR1pQO4bHJ5h",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e3d95e0a-33c1-4b16-8c79-4f8881f809f6"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training data shape: (1338, 13)\n",
-            "Testing data shape: (266, 13)\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(   Unnamed: 0  Year     state state_po County Name  county_fips        office  \\\n",
-              " 0     11161.0  2000  VIRGINIA       VA    ACCOMACK        51001  US PRESIDENT   \n",
-              " 1     11162.0  2000  VIRGINIA       VA    ACCOMACK        51001  US PRESIDENT   \n",
-              " 2     11165.0  2000  VIRGINIA       VA   ALBEMARLE        51003  US PRESIDENT   \n",
-              " 3     11166.0  2000  VIRGINIA       VA   ALBEMARLE        51003  US PRESIDENT   \n",
-              " 4     11169.0  2000  VIRGINIA       VA   ALLEGHANY        51005  US PRESIDENT   \n",
-              " \n",
-              "         Candidate       Party  Candidate Votes  Total Votes     version   mode  \n",
-              " 0         AL GORE    DEMOCRAT             5092        11925  20220315.0  TOTAL  \n",
-              " 1  GEORGE W. BUSH  REPUBLICAN             6352        11925  20220315.0  TOTAL  \n",
-              " 2         AL GORE    DEMOCRAT            16255        36846  20220315.0  TOTAL  \n",
-              " 3  GEORGE W. BUSH  REPUBLICAN            18291        36846  20220315.0  TOTAL  \n",
-              " 4         AL GORE    DEMOCRAT             2214         5123  20220315.0  TOTAL  ,\n",
-              "       Unnamed: 0  Year     state state_po      County Name  county_fips  \\\n",
-              " 1338         NaN  2020  VIRGINIA       VA         ACCOMACK        51001   \n",
-              " 1339         NaN  2020  VIRGINIA       VA        ALBEMARLE        51003   \n",
-              " 1340         NaN  2020  VIRGINIA       VA  ALEXANDRIA CITY        51510   \n",
-              " 1341         NaN  2020  VIRGINIA       VA        ALLEGHANY        51005   \n",
-              " 1342         NaN  2020  VIRGINIA       VA           AMELIA        51007   \n",
-              " \n",
-              "             office          Candidate     Party  Candidate Votes  Total Votes  \\\n",
-              " 1338  US PRESIDENT  JOSEPH R BIDEN JR  DEMOCRAT             7578        16962   \n",
-              " 1339  US PRESIDENT  JOSEPH R BIDEN JR  DEMOCRAT            42466        64657   \n",
-              " 1340  US PRESIDENT  JOSEPH R BIDEN JR  DEMOCRAT            66240        82521   \n",
-              " 1341  US PRESIDENT  JOSEPH R BIDEN JR  DEMOCRAT             2243         8203   \n",
-              " 1342  US PRESIDENT  JOSEPH R BIDEN JR  DEMOCRAT             2411         7894   \n",
-              " \n",
-              "       version mode  \n",
-              " 1338      NaN  NaN  \n",
-              " 1339      NaN  NaN  \n",
-              " 1340      NaN  NaN  \n",
-              " 1341      NaN  NaN  \n",
-              " 1342      NaN  NaN  )"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Create a linear regression model using the train data\n",
-        "X_train = pd.concat([\n",
-        "    pd.get_dummies(train_df['Candidate'], dtype='int'),\n",
-        "    pd.get_dummies(train_df['County Name'], dtype='int'),\n",
-        "    pd.get_dummies(train_df['Party'], dtype='int'),\n",
-        "    train_df[['Total Votes']]\n",
-        "], axis=1)\n",
-        "X_train.columns = X_train.columns.astype(str)\n",
-        "y_train = train_df['Candidate Votes']\n",
-        "\n",
+        "# 3. Create a linear regression model using the data\n",
         "X = pd.get_dummies(df['Candidate'], dtype='int')  # One-hot encode the 'Candidate' column\n",
         "X_party = pd.get_dummies(df['Party'], dtype='int')  # One-hot encode the 'Party' column\n",
         "X_county = pd.get_dummies(df['County Name'], dtype='int') # One-hot encode the 'County Name' column\n",
@@ -803,7 +714,7 @@
           "height": 424
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1132,15 +1043,7 @@
     {
       "cell_type": "code",
       "source": [
-        "X_test = pd.concat([\n",
-        "    pd.get_dummies(test_df['Year'], dtype='int'),\n",
-        "    pd.get_dummies(test_df['County Name'], dtype='int'),\n",
-        "    pd.get_dummies(test_df['Party'], dtype='int'),\n",
-        "    test_df[['Total Votes']]\n",
-        "], axis=1)\n",
-        "X_test.columns = X_test.columns.astype(str)\n",
-        "y_test = test_df['Candidate Votes']\n",
-        "\n",
+        "# 4. Calculate metrics to asses the model\n",
         "# Calculate R^2\n",
         "r2 = reg.score(X_final, y)\n",
         "print('R_squared: ', r2)"
@@ -1152,7 +1055,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,6 +1069,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 5. Use model to predict 2024 votes - Ben\n",
         "# Calculate total votes growth rates\n",
         "total_votes = df.groupby(['County Name', 'Year'])['Total Votes'].sum().reset_index()\n",
         "\n",
@@ -1192,7 +1096,7 @@
         "id": "fDSER2a5Lurm",
         "outputId": "c1b8929b-8e11-4baa-d10a-d1f3797a121d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1531,7 +1435,7 @@
         "id": "3UNyFePbL19u",
         "outputId": "80d68e75-c663-47d5-df2d-49768b7b8b38"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1635,7 +1539,7 @@
         "id": "wMVEf1E0eSBM",
         "outputId": "4c646870-5774-4173-c724-79edf305d53e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1728,7 +1632,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Calcute net votes for each county using predicted values\n",
+        "# 6. Calculate net votes for each county using predicted values\n",
         "df_2024 = pd.concat([dem_df, rep_df], ignore_index=True)\n",
         "\n",
         "df_2024 = df_2024.groupby(['County Name', 'county_fips'])['Candidate Votes'].sum().reset_index()\n",
@@ -1742,7 +1646,7 @@
         },
         "outputId": "a126453b-1610-4c2f-887b-e98054bec24b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1778,7 +1682,7 @@
         "id": "JekD4weKKQkm",
         "outputId": "e2d350fa-4bf5-4970-d37e-4efd9e0d431d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1806,6 +1710,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 7. Create a state map based on 2024 inputs to the model\n",
         "import geopandas as gpd\n",
         "import mapclassify\n",
         "import pandas as pd\n",
@@ -1826,7 +1731,7 @@
       "metadata": {
         "id": "WqruGgU9MPRO"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1849,7 +1754,7 @@
         "id": "ueUyG3ybT05i",
         "outputId": "b06c80d5-5693-4ebd-8649-48503d41624e"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1877,7 +1782,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "The map of Virginia displays the transformed net votes for the 2024 predictions, highlighting regional voting trends with a blue to red gradient where blue indicates a preference for one candidate and red for another. Northern Virginia shows a competitive mix of colors, reflecting its diverse political landscape, while southern regions are predominantly red, indicating a stronger preference for the opposing candidate. This geographic visualization helps in identifying key battleground areas and understanding demographic influences on voting behaviors, which could be pivotal for future political strategies and campaigns."
+        "The map of Virginia displays the transformed net votes for the 2024 predictions, highlighting regional voting trends with a blue to red gradient where blue indicates a preference for one candidate and red for another. Northern Virginia shows a competitive mix of colors, reflecting its diverse political landscape, while southern regions are predominantly red, indicating a stronger preference for the opposing candidate. This geographic visualization helps in identifying key battleground areas and understanding demographic influences on voting behaviors, which could be pivotal for future political strategies and campaigns.\n"
       ],
       "metadata": {
         "id": "6BgvZQp0Y8ou"
